@@ -3,11 +3,6 @@
 	* gnome-settings-daemon/Makefile.am: commented lines ending in a
 	trailing backslash are not a good idea.
 
-2002-06-21  Satyajit Kanungo  <satyajit.kanungo@wipro.com>
-
-	* capplets/accessibility/keyboard/gnome-accessibility-keyboard-properties.c :
- 	 Changed the help link to point to the correct document (#85895)
-
 2002-06-18  jacob berkman  <jacob@ximian.com>
 
 	* configure.in:
