@@ -1,3 +1,8 @@
+2002-06-21  Satyajit Kanungo  <satyajit.kanungo@wipro.com>
+
+	* gnome-accessibility-keyboard-properties.c :
+ 	 Changed the help link to point to the correct document (#85895)
+
 2002-06-10  Jody Goldberg <jody@gnome.org>
 
 	* accessibility-keyboard.c : tweak the layout as requested and adjust
